@@ -1,5 +1,16 @@
 2012-02-25  Vladimir Serbinenko  <phcoder@gmail.com>
 
+	* grub-core/gnulib/argp-fmtstream.c (__argp_get_display_len):
+	New function.
+	(add_length): Likewise.
+	(__argp_fmtstream_update): Handle strings with non-ASCII chars.
+	* grub-core/gnulib/argp-fmtstream.h (__argp_get_display_len): New
+	proto.
+	* grub-core/gnulib/argp-help.c (argp_args_usage): Use
+	__argp_get_display_len.
+
+2012-02-25  Vladimir Serbinenko  <phcoder@gmail.com>
+
 	$"..." support in scripts.
 
 	* grub-core/script/execute.c (grub_script_arglist_to_argv): Handle
